Graphs added to softskills, early styles applied to text

--- a/main.css
+++ b/main.css
@@ -1,41 +1,55 @@
-@import url('https://fonts.googleapis.com/css2?family=Gotu&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gotu&family=Montserrat+Alternates:wght@400;700&display=swap');
 
 :root {
     --light-bg-color: #f7f0f5;
-    --dark-bg-color: #fcecc9;
+    --dark-bg-color: #3f3716;
     --green-accent: #034c3c;
     --blue-accent: #2f6690;
     --red-accent: #ea2b1f;
 }
 
 body {
-    font-family: 'Montserrat';
+    font-family: 'Gotu';
     background: var(--light-bg-color);
+    padding: 15px;
+    font-size: 16px;
+}
+
+section {
+    margin-bottom: 2em;
 }
 
 h1, h2, h3 {
-    font-family: 'Gotu';
+    font-family: 'Montserrat Alternates';
     text-transform: capitalize;
     text-align: center;
+    font-weight: 700;
 }
 
 h1 {
-    color: var(--green-accent);
-    text-align: left;
-    margin-left: 10px;
+    background: var(--blue-accent);
+    color: #f7f7f7;
+    font-size: 21px;
+    padding: 3px;
+    border-radius: 1em 4em;
+    max-width: 55%;
+    margin: 0 auto;
 }
 
 h2 {
-    font-size: 21px
+    font-size: 19px;
 }
 
 h3 {
-    color: var(--blue-accent);
+    color: var(--green-accent);
+    font-size: 17px;
 }
 
 p {
-    margin: 0 10%;
+    margin: 1em 10%;
     text-align: left;
+    line-height: 1.5em;
+    letter-spacing: .5px;
 }
 
 a {
@@ -52,7 +66,16 @@ ul, li {
     list-style: none;
     line-height: 1.5em;
     padding: 0;
-    margin: 0px 1em;
+    text-align: center;
+}
+
+
+.hardskills li {
+    margin-top: 1em;
+}
+
+.softskills li {
+    margin-top: 1em;
 }
 
 .fa-html5 {
@@ -83,12 +106,28 @@ ul, li {
     color: #098df2;
 }
 
+canvas {
+    margin: 0 auto;
+}
+
 .summary {
     display: flex;
     flex-direction: column;
 }
 
-#remote-work-graph {
-    width: 500px;
-    height: 500px;
+.name h1 {
+    font-size: 30px;
+}
+
+.contact-info {
+    text-align: center;
+}
+
+.contact-info h1 {
+    margin-bottom: 1em;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-evenly;
 }
