--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Gotu&family=Montserrat+Alternates:wght@400;700&display=swap');
+/* @media print {
+    body{
+        width: 21cm;
+        height: 29.7cm;
+        margin: 30mm 45mm 30mm 45mm; 
+   } 
+} */
 
 :root {
     --light-bg-color: #f7f0f5;
@@ -32,7 +39,7 @@ h1 {
     font-size: 21px;
     padding: 3px;
     border-radius: 1em 4em;
-    max-width: 55%;
+    max-width: 60%;
     margin: 0 auto;
 }
 
@@ -89,7 +96,7 @@ ul, li {
 }
 
 .fa-js-square {
-    color: #3a8e8f;
+    color: rgb(238 219 69);
     margin-right: 15px;
 }
 
@@ -103,7 +110,22 @@ ul, li {
 }
 
 .fa-linkedin {
-    color: #098df2;
+    color: rgb(33 120 185);
+}
+
+.fa-phone-alt {
+    font-size: 25px;
+    margin-right: .5em;
+}
+
+.fa-envelope {
+    font-size: 25px;
+    margin-right: .5em;
+}
+
+.fa-globe {
+    font-size: 25px;
+    margin-right: .5em;
 }
 
 canvas {
@@ -119,15 +141,129 @@ canvas {
     font-size: 30px;
 }
 
-.contact-info {
+
+.references p {
     text-align: center;
+    line-height: 2em;
+}
+
+.contact-info {
+    text-align: left;
 }
 
 .contact-info h1 {
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
+}
+
+.contact {
+    margin-bottom: 1.5em;
 }
 
 .socials {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+.socials i {
+    font-size: 25px;
+}
+
+.socials a:nth-of-type(2){
+    margin-top: 1.5em;
+}
+
+.socials p {
+    display: none;
+}
+
+
+@media only screen and (min-width: 800px) {
+    body {
+        display: grid;
+        grid-template-areas: 
+        "intro intro intro"
+        "education summary summary"
+        "tools skills skills"
+        "tools workxp workxp"
+        "contact workxp workxp"
+        "references projects projects";
+        grid-template-columns: .75fr 1.25fr 1fr;
+        grid-template-rows: .75fr .75fr .75fr .75fr .75fr .75fr;
+    }
+
+    .intro {
+        grid-area: intro;
+    }
+
+    .summary {
+        grid-area: summary;
+    }
+
+    .work-experience {
+        grid-area: workxp;
+    }
+
+    .selected-projects {
+        grid-area: projects;
+    }
+
+    .education {
+        grid-area: education;
+        margin-left: 2em;
+    }
+
+    .hardskills {
+        grid-area: tools;
+    }
+
+    .softskills {
+        grid-area: skills;
+    }
+
+    .softskills ul {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .references {
+        grid-area: references;
+    }
+
+    .contact-info {
+        grid-area: contact;
+        margin-left: 2em;
+    }
+
+    .contact-info i {
+        margin-right: 1em;
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        text-align: left;
+    }
+
+    .contact a {
+        display: flex;
+        align-items: center;
+    }
+
+    .socials {
+        flex-direction: column;
+        text-align: left;
+    }
+
+    
+    .socials a {
+        display: flex;
+        align-items: center;
+    }
+    
+    .socials p {
+        display: initial;
+        margin: 0;
+    }
+    
 }
