--- a/main.css
+++ b/main.css
@@ -1,11 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Gotu&family=Montserrat+Alternates:wght@400;700&display=swap');
-/* @media print {
-    body{
-        width: 21cm;
-        height: 29.7cm;
-        margin: 30mm 45mm 30mm 45mm; 
-   } 
-} */
 
 :root {
     --light-bg-color: #f7f0f5;
@@ -76,7 +69,6 @@ ul, li {
     text-align: center;
 }
 
-
 .hardskills li {
     margin-top: 1em;
 }
@@ -88,29 +80,35 @@ ul, li {
 .fa-html5 {
     color: var(--red-accent);
     margin-right: 15px;
+    font-size: 50px;
 }
 
 .fa-css3-alt {
     color: var(--blue-accent);
     margin-right: 15px;
+    font-size: 50px;
 }
 
 .fa-js-square {
     color: rgb(238 219 69);
     margin-right: 15px;
+    font-size: 50px;
 }
 
 .fa-react {
     color: #5ba8e3;
     margin-right: 15px;
+    font-size: 50px;
 }
 
 .fa-github-square {
     margin-right: 15px;
+    font-size: 50px;
 }
 
 .fa-linkedin {
     color: rgb(33 120 185);
+    font-size: 50px;
 }
 
 .fa-phone-alt {
@@ -141,7 +139,6 @@ canvas {
     font-size: 30px;
 }
 
-
 .references p {
     text-align: center;
     line-height: 2em;
@@ -157,6 +154,9 @@ canvas {
 
 .contact {
     margin-bottom: 1.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .socials {
@@ -169,7 +169,7 @@ canvas {
 }
 
 .socials a:nth-of-type(2){
-    margin-top: 1.5em;
+    /* margin-top: 1.5em; */
 }
 
 .socials p {
